devices selector: fixed hovering on invisible elements

--- a/src/assets/styles/components/player/_player.scss
+++ b/src/assets/styles/components/player/_player.scss
@@ -170,6 +170,7 @@
                 bottom: 100%;
                 right: 0;
                 opacity: 0;
+                visibility: hidden;
                 list-style: none;
                 padding: 0;
                 margin: 0;
@@ -207,6 +208,7 @@
 
             &:hover &-list {
                 opacity: 1;
+                visibility: visible;
             }
         }
     }
